# iliad

./: .gitignore  .mypy.ini  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
iliad/: autoload.py  cli.py  find.py
iliad/cli/: __init__.py  cli.py
iliad/commands/: list.py  run.py
stubs/: reprint.pyi
tests/: conftest.py  test_autoload.py  test_cli.py  test_version.py
tests/autoload/: module_a.py
tests/autoload/submodule/: module_b.py
tests/cli/: test_cli.py
tests/commands/: test_list.py  test_run.py
