[tool.poetry]
name = "iliad"
version = "0.5.0"
description = "A monorepo tool for Poetry"
authors = ["Joseph Egan <joseph.s.egan@gmail.com>"]
license = "MIT"

repository = "https://github.com/eganjs/iliad"

readme = "README.md"

[tool.poetry.scripts]
iliad = "iliad.cli:cli"

[tools.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
isort = "^5.3.2"
black = "^19.10b0"
flake8 = "^3.8.3"
pyprojroot = "^0.2.0"
toml = "^0.10.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
